fix: entity Type error 수정
Signed-off-by: Han KyuHyun <khh5345@naver.com>